test/lattests/extensions/objects1/bad/variableOfNonexistentType.lat
int main() {
    a a;

    return 0;
}